<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent">

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:weightSum="1">
		<LinearLayout android:layout_width="fill_parent"
			android:id="@+id/linearLayout1" android:layout_height="wrap_content"
			android:background="@drawable/redline"></LinearLayout>

		<TextView android:id="@+id/textView1" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/m_s"
			android:textAppearance="@style/textStyle"></TextView>
		<EditText android:layout_weight="0.18" android:layout_height="wrap_content"
			android:layout_width="fill_parent" android:inputType="textMultiLine"
			android:maxLength="100" android:id="@+id/message_txt"></EditText>
		<TextView android:id="@+id/textView2" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/p_n"
			android:textAppearance="@style/textStyle"></TextView>
		<EditText android:layout_height="wrap_content"
			android:layout_width="fill_parent" android:inputType="phone"
			android:id="@+id/phone_numbers"></EditText>
		<TextView android:text="Put (,) if you'll enter more than one phone number .. "
			android:id="@+id/textView1" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:textAppearance="@style/textStyle"
			android:textColor="#ED1F24"></TextView>
		<Button android:layout_height="50dip" android:layout_width="fill_parent"
			android:id="@+id/save_btn" android:text="@string/save_btn"></Button>
		<LinearLayout android:id="@+id/linearLayout2"
			android:layout_height="wrap_content" android:layout_width="fill_parent"
			android:orientation="vertical">
			<CheckBox android:layout_height="wrap_content"
				android:layout_width="fill_parent" android:text="@string/check_bos"
				android:id="@+id/check_box" android:checked="false"></CheckBox>
		</LinearLayout>
		<TextView android:layout_height="wrap_content" android:id="@+id/textView3"
			android:layout_width="fill_parent" android:text="@string/txt_v"
			android:gravity="center"></TextView>
	</LinearLayout>
</ScrollView>